# smart-scan

./: .gitignore  CMakeLists.txt
C-Python_collab/C-Python_Collab-Test/: C-Python_Collab-Test.sln  test.py
C-Python_collab/C-Python_Collab-Test/C-Python_Collab-Test/: C-Python_Collab-Test.cpp  C-Python_Collab-Test.h  C-Python_Collab-Test.vcxproj  C-Python_Collab-Test.vcxproj.filters  pyHandler.cpp
C-Python_collab/C-Python_Collab-Test/C-Python_Collab-Test/inc/: pyHandler.h  pyhelper.h
C-Python_collab/C-Python_Collab-Test/C-Python_Collab-Test/src/: pyHandler.cpp  pyhelper.cpp
C-Python_collab/C-Python_Collab-Test/Lib/: python310_d.lib  python3_d.lib
C-Python_collab/pythonTest/: pythonTest.sln
C-Python_collab/pythonTest/pythonTest/: Source.cpp  pythonTest.vcxproj
SmartScanService/: CMakeLists.txt
SmartScanService/src/: DataAcquisition.cpp  Trigger.cpp
cmake_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters  smart-scan.sln
cmake_build/ATC3DG64/: ATC3DG64.vcxproj  ATC3DG64.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
cmake_build/SmartScanService/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SmartScanService.vcxproj  SmartScanService.vcxproj.filters  cmake_install.cmake
cmake_build/configs/: settings.ini
cmake_build/install_bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.vcxproj  main.vcxproj.filters  main_file.vcxproj  main_file.vcxproj.filters  smart-scan.sln
cmake_build/install_bin/SmartScanService/: INSTALL.vcxproj  INSTALL.vcxproj.filters  SmartScanService.lib  SmartScanService.vcxproj  SmartScanService.vcxproj.filters  cmake_install.cmake
cmake_build/install_bin/atlibrary/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
cmake_build/install_bin/simpleble/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  simpleble-c.vcxproj  simpleble-c.vcxproj.filters  simpleble.pc  simpleble.sln  simpleble.vcxproj  simpleble.vcxproj.filters
cmake_build/install_bin/simpleble_examples/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  simpleble_examples.sln
cmake_build/install_bin/simpleble_install/simpleble/: ALL_BUILD.vcxproj  (+7 more)
cmake_build/install_bin_desktop/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  main.vcxproj  main.vcxproj.filters  smart-scan.sln
cmake_build/install_bin_desktop/ATC3DG64/: ATC3DG64.vcxproj  ATC3DG64.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
cmake_build/install_bin_desktop/SmartScanService/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SmartScanService.vcxproj  SmartScanService.vcxproj.filters  cmake_install.cmake
cmake_build/install_bin_desktop/configs/: settings.ini
cmake_build/install_bin_desktop/simpleble/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  simpleble-c.vcxproj  simpleble-c.vcxproj.filters  simpleble.sln  simpleble.vcxproj  simpleble.vcxproj.filters
cmake_build/simpleble/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  simpleble-c.vcxproj  simpleble-c.vcxproj.filters  simpleble.sln  simpleble.vcxproj  simpleble.vcxproj.filters
cmake_build/smart_scan_reformatted/: CMakeLists.txt  CMakeSettings.json  SmartScanCLI.cpp
cmake_build/smart_scan_reformatted/SmartScanService/: CMakeLists.txt
cmake_build/smart_scan_reformatted/SmartScanService/inc/: SmartScanService.h
cmake_build/smart_scan_reformatted/SmartScanService/src/: CSVExport.cpp  Point3.cpp  SmartScanService.cpp  TrakStarController.cpp
cmake_build/smart_scan_reformatted/lib_ATC3DG64/: CMakeLists.txt
cmake_build/smart_scan_reformatted/lib_SmartScanService/: CMakeLists.txt
cmake_build/smart_scan_reformatted/lib_SmartScanService/src/: DataAcquisition.cpp  SmartScanService.cpp
cmake_build/smart_scan_reformatted/lib_simpleble_install/simpleble/include/simpleble/: Utils.h
cmake_build/smart_scan_reformatted/lib_simpleble_install/simpleble/src/: Utils.cpp
cmake_build/smart_scan_reformatted/lib_simpleble_install/simpleble/src/backends/windows/: Utils.h
cmake_build/smart_scan_reformatted/simpleble_install/simpleble/include/simpleble/: Adapter.h
cmake_build/smart_scan_reformatted/simpleble_install/simpleble/src/backends/windows/: Utils.h
simpleble_install/simpleble/src/: Utils.cpp
smart-scan/: CMakeLists.txt
smart-scan/SmartScanCli/: CMakeLists.txt
smart-scan/SmartScanService/: CMakeLists.txt
smart-scan/SmartScanService/inc/: CMakeLists.txt
smart-scan/SmartScanService/src/: DataAcquisition.cpp  Scan.cpp
smart_scan_BLE/: CMakeLists.txt
smart_scan_BLE/SmartScanCli/: SmartScanCLI.cpp  SmartScanConfig.h
smart_scan_BLE/SmartScanService/: CMakeLists.txt
smart_scan_BLE/SmartScanService/inc/: BLEController.h  DataAcquisition.h  DirDef.h  Point3.h  SmartScanService.h
smart_scan_BLE/SmartScanService/src/: BLEController.cpp  CSVExport.cpp  DataAcquisition.cpp  Point3.cpp  Scan.cpp  SmartScanService.cpp  TrakStarController.cpp
smart_scan_BLE/simpleble_install/simpleble/include/simpleble/: Utils.h
smart_scan_BLE/simpleble_install/simpleble/src/: Utils.cpp
(+96 files in other folders)
